--- a/src/app/dishes/dishes.component.html
+++ b/src/app/dishes/dishes.component.html
@@ -1,5 +1,19 @@
-<h2>{{dish.name | uppercase}} Details</h2>
-<div><span>id: </span>{{dish.id}}</div>
-<div><label for="name">Dish name: </label>
-  <input id="name" [(ngModel)]="dish.name" placeholder="name"/>
+<h2>My dishes</h2>
+<ul class="dishes">
+  <li *ngFor="let dish of dishes">
+    <button type="button"
+            (click)="onSelect(dish)"
+            [class.selected]="dish === selectedDish">
+      <span class="badge">{{dish.id}}</span>
+      <span class="name">{{dish.name}}</span></button>
+  </li>
+</ul>
+<div *ngIf="selectedDish">
+  <h2>{{selectedDish.name | uppercase}} Details</h2>
+  <div>id: {{selectedDish.id}}</div>
+  <div>
+    <label for="dish-name">Dish name: </label>
+    <input id="dish-name" [(ngModel)]="selectedDish.name" placeholder="name">
+  </div>
 </div>
+
